[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-web-scraper"
version = "0.1.0"
description = "An AI-powered web scraper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Examples:
    # "requests>=2.28.0",
    # "beautifulsoup4>=4.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
